# cursive-tabs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  cargo-test.json  shellshot.json
.github/workflows/: test_and_push.yml
assets/: README.md  config.yml  demo.yml
examples/: bottom.rs  end2end_add_at.rs  end2end_add_at_panel.rs  end2end_panel_smoke.rs  end2end_remove_active.rs  end2end_remove_inactive.rs  end2end_swap.rs  end2end_switch.rs  end2end_vertical_left.rs  end2end_vertical_right.rs  fullscreen.rs  simple.rs  vertical.rs  vertical_right.rs
src/: bar.rs  error.rs  lib.rs  panel.rs
tests/: end2end.rs  end2end.test.js  package-lock.json  package.json
tests/__snapshots__/: end2end.test.js.snap
tests/snapshots/: end2end__end2end_add_at.snap  end2end__end2end_add_at_action_change_tab.snap  end2end__end2end_add_at_panel.snap  end2end__end2end_panel_smoke.snap  end2end__end2end_remove_active.snap  end2end__end2end_swap.snap  end2end__end2end_switch.snap  end2end__end2end_vertical_left.snap  end2end__end2end_vertical_left_with_action_change_tab.snap  end2end__end2end_vertical_right.snap  end2end__puppet_screen.snap
