[package]
name = "cursive-tabs"
version = "0.4.3-alpha.0"
authors = ["Fin Christensen <christensen.fin@gmail.com>", "Johannes Wünsche <johannes.wuensche97@gmail.com>"]
edition = "2018"
description = "Tabs for gyscos/cursive views"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["cursive", "tui", "terminal", "tabs", "view"]
repository = "https://github.com/deinstapel/cursive-tabs"
documentation = "https://docs.rs/cursive-tabs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.14.0", default-features = false }
crossbeam = "0.7.3"
log = "0.4.8"
num = "0.2.1"

[dev-dependencies]
serde_json = "1.0.48"
cursive = "0.14.0"

[badges]
travis-ci = { repository = "deinstapel/cursive-tabs" }
