[package]
name = "cursive-tabs"
version = "0.6.0"
authors = ["Fin Christensen <christensen.fin@gmail.com>", "Johannes Wünsche <johannes.wuensche97@gmail.com>"]
edition = "2018"
description = "Tabs for gyscos/cursive views"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["cursive", "tui", "terminal", "tabs", "view"]
repository = "https://github.com/deinstapel/cursive-tabs"
documentation = "https://docs.rs/cursive-tabs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive_core = "0.2"
crossbeam = "0.8"
log = "0.4"
num = "0.3"

[dev-dependencies]
serde_json = "1.0.48"
cursive = "0.16"
insta = "1.7"

[badges]
travis-ci = { repository = "deinstapel/cursive-tabs" }
